--- a/src/Shared/styles/_index.scss
+++ b/src/Shared/styles/_index.scss
@@ -4,3 +4,5 @@
 @import './base/layout';
 
 @import '../elements/StagingBanner/StagingBanner.scss';
+@import '../elements/NodeDraft/NodeDraft.scss';
+@import '../elements/SiteLoading/SiteLoading.scss';
