--- a/src/Blog/groups/PostDetail/PostDetail.scss
+++ b/src/Blog/groups/PostDetail/PostDetail.scss
@@ -31,6 +31,11 @@
     }
   }
 
+  .node-meta {
+    @include rhythm-v-compact;
+    @include spacing-h;
+  }
+
   /* stylelint-disable-line selector-max-compound-selectors */
   .post-content > p:first-child::first-letter {
     float: left;
