load `ResponsiveImg` on scroll into view; load transition

--- a/src/Shared/blocks/Hero/Hero.scss
+++ b/src/Shared/blocks/Hero/Hero.scss
@@ -29,6 +29,7 @@
     @include container;
     @include type-medium;
     padding-top: 5vh;
+    margin-bottom: 5vh;
     position: relative;
     z-index: 1;
 
