--- a/src/Shared/elements/ResponsiveImg/ResponsiveImg.scss
+++ b/src/Shared/elements/ResponsiveImg/ResponsiveImg.scss
@@ -1,13 +1,21 @@
-.fluid {
+.r-img {
   display: block;
   width: 100%;
   height: 100%;
 
   img {
     display: block;
+    opacity: 0;
     width: 100%;
     height: 100%;
     object-fit: cover;
     object-position: center;
+    transition: opacity 1s ease-in-out;
+  }
+
+  &.is-loaded {
+    img {
+      opacity: 1;
+    }
   }
 }
