--- a/src/Shared/elements/Markdown/Markdown.mixins.scss
+++ b/src/Shared/elements/Markdown/Markdown.mixins.scss
@@ -12,6 +12,12 @@
 @mixin markdown-base {
   @include markdown;
 
+  .icon {
+    display: inline-block;
+    width: 0.8em;
+    height: 0.8em;
+  }
+
   & > :first-child {
     margin-top: 0;
   }
