chore: migrate tslint to eslint; improve stylelint integration; re-beautify;

--- a/src/Media/templates/Index/IndexTemplate.scss
+++ b/src/Media/templates/Index/IndexTemplate.scss
@@ -1,6 +1,8 @@
 @import '../../../Shared/styles/mixins/reset';
 @import '../../../Shared/styles/mixins/layout';
 
+// extend BasePage
+
 @import '../../../Shared/templates/BasePage.mixin';
 
 .media-index {
