--- a/src/Meta/styles/MetaNode.mixins.scss
+++ b/src/Meta/styles/MetaNode.mixins.scss
@@ -8,8 +8,8 @@
   .contents {
     @include meta-node-scheme;
     border: 1px dashed var(--root-scheme-edge);
-    border-left-width: 0px;
-    border-right-width: 0px;
+    border-left-width: 0;
+    border-right-width: 0;
   }
 
   @include breakpoint-compact {
