--- a/src/Shared/styles/_index.scss
+++ b/src/Shared/styles/_index.scss
@@ -3,6 +3,7 @@
 @import './base/typography';
 @import './base/layout';
 
+// elements
+
 @import '../elements/StagingBanner/StagingBanner.scss';
 @import '../elements/NodeDraft/NodeDraft.scss';
-@import '../elements/SiteLoading/SiteLoading.scss';
