--- a/src/Shared/styles/settings/_color.scss
+++ b/src/Shared/styles/settings/_color.scss
@@ -1,6 +1,6 @@
 $color-primitives: (
   primary: hsl(1, 71%, 36%),
-  primary-bright: hsl(1, 68%, 38%),
+  primary-bright: rgb(162, 33, 31),
   primary-contrast: hsl(39, 15%, 90%),
   secondary: hsl(205, 18%, 20%),
   secondary-bright: hsl(205, 18%, 90%),
