--- a/src/Site/styles/PageNode.mixins.scss
+++ b/src/Site/styles/PageNode.mixins.scss
@@ -2,8 +2,8 @@
 
 @mixin page-node-scheme {
   border: 1px solid var(--root-scheme-edge);
-  border-left-width: 0px;
-  border-right-width: 0px;
+  border-left-width: 0;
+  border-right-width: 0;
 
   @include breakpoint-compact {
     border-left-width: 1px;
