--- a/src/Site/blocks/SiteHeader/SiteHeader.scss
+++ b/src/Site/blocks/SiteHeader/SiteHeader.scss
@@ -17,8 +17,8 @@
 
   .site-title {
     @include type-brand;
+    @include type-huge;
     margin: 0 0 gap('small');
-    font-size: responsive-type-size(huge);
     // transform: scale(0.8);
     transition: transform 0.25s ease;
     transform-origin: top left;
