--- a/src/Shared/blocks/Hero/Hero.scss
+++ b/src/Shared/blocks/Hero/Hero.scss
@@ -17,11 +17,19 @@
     width: 100%;
     height: 100%;
 
+    figure {
+      height: 100%;
+    }
+
     img {
       width: 100%;
       height: 100%;
       object-fit: cover;
       object-position: center;
+    }
+
+    figcaption {
+      display: none;
     }
   }
 
