--- a/src/Shared/styles/settings/_type.scss
+++ b/src/Shared/styles/settings/_type.scss
@@ -8,6 +8,7 @@ $type-families: (
 );
 
 $type-sizes: (
+  giga: 6rem,
   huge: 4rem,
   h1: 3.5rem,
   h2: 2.8rem,
@@ -19,6 +20,7 @@ $type-sizes: (
 );
 
 $type-scalars: (
+  giga: 0.5,
   huge: 0.5,
   h1: 0.5,
   h2: 0.25,
